SW-7891 Fixed: Missing color

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/sitemap.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/sitemap.less
@@ -46,7 +46,7 @@
 	background-color: @darkBackgroundColor;
 
 	.sitemap--navigation-head-link {
-	    color: @whiteTextColor;
+	    color: #fff;
 	}
     }
 }
